--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,4 +1,18 @@
+//= depend_on_asset "glyphicons-halflings-regular.eot"
+//= depend_on_asset "glyphicons-halflings-regular.woff"
+//= depend_on_asset "glyphicons-halflings-regular.ttf"
+//= depend_on_asset "glyphicons-halflings-regular.svg"
+//= depend_on_asset "twitter/bootstrap/glyphicons-halflings.png"
+//= depend_on_asset "twitter/bootstrap/glyphicons-halflings-white.png"
+//= depend_on_asset "fontawesome-webfont.eot"
+//= depend_on_asset "fontawesome-webfont.eot"
+//= depend_on_asset "fontawesome-webfont.woff"
+//= depend_on_asset "fontawesome-webfont.ttf"
+//= depend_on_asset "fontawesome-webfont.svg"
+
 @import "twitter/bootstrap/bootstrap";
+@import "bootswatch/variables.less";
+@import "bootswatch/bootswatch.less";
 
 // Set the correct sprite paths
 @iconSpritePath: image-url("twitter/bootstrap/glyphicons-halflings.png");
@@ -27,3 +41,14 @@
 //
 // Example:
 // @link-color: #ff0000;
+
+/* bootstrap hack: fix content width inside hidden tabs */
+.tab-content > .tab-pane, .pill-content > .pill-pane {
+  display: block;    /* undo display:none          */
+  height: 0;         /* height:0 is also invisible */
+  overflow: hidden;  /* no-overflow                */
+}
+.tab-content > .active, .pill-content > .active {
+  height: auto;      /* let the content decide it  */
+}
+/* bootstrap hack end */
