--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,3 +33,18 @@ body, h1, h2, h3, h4, text {
 .left   { text-align: left;   }
 .center { text-align: center; }
 .right  { text-align: right;  }
+
+.shadow {
+  text-shadow:
+    0px 1px 0px #aaa,
+    0px 2px 0px #aaa,
+    0px 3px 0px #aaa,
+    0px 4px 0px #aaa,
+    0px 5px 0px #aaa;
+}
+
+.black { color: #555; }
+.black:hover {
+  color: #555;
+  text-decoration: none;
+}
