--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,4 +10,9 @@ html
     link href="http://fonts.googleapis.com/css?family=Exo:400,600,800" rel="stylesheet" type="text/css"
 
   body
-    = yield
+    .container
+      = yield
+
+  footer.center
+    small
+      = link_to '@hico_horiuchi', 'https://twitter.com/hico_horiuchi', class: 'black'
