--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -52,3 +52,5 @@
   height: auto;      /* let the content decide it  */
 }
 /* bootstrap hack end */
+
+.table tbody>tr>td.middle { vertical-align:middle; }
