--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,11 @@ body, h1, h2, h3, h4, text {
 .center { text-align: center; }
 .right  { text-align: right;  }
 
+.rank { font-size: 24px; }
+
+.title  { margin: 20px 0; }
+.footer { margin-bottom: 20px; }
+
 .shadow {
   text-shadow:
     0px 1px 0px #aaa,
@@ -48,3 +53,10 @@ body, h1, h2, h3, h4, text {
   color: #555;
   text-decoration: none;
 }
+
+.rank-container {
+  width: 300px;
+  margin: 0 auto;
+}
+.num-cell    { width: 25px; }
+.avatar-cell { width: 75px; }
