--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,8 +11,9 @@ html
 
   body
     .container
+      h1.brand.title.center.shadow Longest Streak Ranking
       = yield
 
-  footer.center
+  footer.footer.center
     small
       = link_to '@hico_horiuchi', 'https://twitter.com/hico_horiuchi', class: 'black'
