スクレイピング部分をモジュール化

--- a/app/views/rank/index.html.slim
+++ b/app/views/rank/index.html.slim
@@ -13,4 +13,4 @@
             = link_to user[:html_url], class: 'black' do
               strong #{user[:login]}
             br
-            | #{user[:streak]}
+            | #{user[:longest_streak]}
