レイアウトを微調整

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,9 @@ html
 
   body
     .container
-      h1.brand.title.center.shadow Longest Streak Ranking
+      .title
+        h3.brand.center.shadow GitHub
+        h1.brand.center.shadow Longest Streak Ranking
       = yield
 
   footer.footer.center
