--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,8 +36,8 @@ body, h1, h2, h3, h4, text {
 
 .rank { font-size: 24px; }
 
-.title  { margin: 20px 0; }
-.footer { margin-bottom: 20px; }
+.title  { margin: 20px 0 30px 0; }
+.footer { margin: 10px 0 20px 0; }
 
 .shadow {
   text-shadow:
