アプリ名をStreak Rankingに変更

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title #{@title} | Longest Streak Ranking
+    title #{@title} | Streak Ranking
     meta name="viewport" content="width=device-width, initial-scale=1"
     = stylesheet_link_tag    'application', 'data-turbolinks-track' => true, media: 'all'
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
@@ -13,7 +13,7 @@ html
     .container
       .title
         h3.brand.center.shadow GitHub
-        h1.brand.center.shadow Longest Streak Ranking
+        h1.brand.center.shadow Streak Ranking
       = yield
 
   footer.footer.center
