エラーのレイアウトを修正

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,7 @@ body, h1, h2, h3, h4, text {
 .left   { text-align: left;   }
 .center { text-align: center; }
 .right  { text-align: right;  }
+.white { color: white; }
 
 .rank { font-size: 24px; }
 
