current streakのランキングを追加

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -2,7 +2,7 @@
 
 .row
   .col-md-offset-4.col-md-4
-    = form_tag rank_path, method: :get do
+    = form_tag current_rank_path, method: :get do
       .form-group
         .input-group
           span.input-group-addon = fa_icon 'github fw'
