--- a/app/views/rank/current.html.slim
+++ b/app/views/rank/current.html.slim
@@ -1,4 +1,4 @@
-- @title = 'Rank'
+- @title = 'Current'
 
 .rank-container
   - if @users.empty?
@@ -6,6 +6,10 @@
       h1.white = fa_icon 'times-circle 5x'
       h4.center No such username.
   - else
+    .btn-group.btn-group-justified
+      = link_to 'Current', current_rank_path, class: 'btn btn-info'
+      = link_to 'Longest', longest_rank_path, class: 'btn btn-default'
+    br
     table.table.table-hover
       tbody
         - @users.each_with_index do |user, i|
@@ -18,4 +22,4 @@
               = link_to user[:html_url], class: 'black', target: :_blank do
                 strong #{user[:login]}
               br
-              | #{user[:longest_streak]}
+              | #{user[:current_streak]}
