--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,7 @@ html
     link href="http://fonts.googleapis.com/css?family=Exo:400,600,800" rel="stylesheet" type="text/css"
 
   body
-    .container
+    .rank-container
       .title
         h3.brand.center.shadow GitHub
         h1.brand.center.shadow Streak Ranking
