--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,12 +1,10 @@
 - @title = 'Top'
 
-.row
-  .col-md-offset-4.col-md-4
-    = form_tag current_rank_path, method: :get do
-      .form-group
-        .input-group
-          span.input-group-addon = fa_icon 'github fw'
-          = text_field_tag :username, params[:username], class: 'form-control', placeholder: 'Your GitHub username...'
-          span.input-group-btn
-            = button_tag type: :submit, class: 'btn btn-default' do
-              = fa_icon 'search fw'
+= form_tag current_rank_path, method: :get do
+  .form-group
+    .input-group
+      span.input-group-addon = fa_icon 'github fw'
+      = text_field_tag :username, params[:username], class: 'form-control', placeholder: 'GitHub username...'
+      span.input-group-btn
+        = button_tag type: :submit, class: 'btn btn-default' do
+          = fa_icon 'search fw'
